chore: two small readability fixes